--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Fusée</title>
+    <title>Fusée Infinity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
         body {
@@ -13,14 +13,13 @@
             text-align: center;
         }
 
-        #game {
-            position: relative;
-            width: 100vw;
-            height: 100vh;
+        #game-container {
+            position: fixed;
+            inset: 0;
             overflow: hidden;
+            z-index: -1;
         }
 
-        /* Fond spatial animé */
         .star {
             position: absolute;
             width: 2px;
@@ -30,7 +29,95 @@
             border-radius: 50%;
         }
 
-        /* Fusée */
+        .screen {
+            position: absolute;
+            inset: 0;
+            display: none;
+        }
+
+        .screen.active {
+            display: block;
+        }
+
+        #home-screen {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        #title {
+            font-size: 48px;
+            letter-spacing: 4px;
+            text-shadow: 0 0 10px #fff;
+            margin-bottom: 20px;
+        }
+
+        #pseudo-input {
+            padding: 10px 15px;
+            font-size: 18px;
+            border-radius: 8px;
+            border: none;
+            outline: none;
+            width: 220px;
+            text-align: center;
+        }
+
+        .menu-button {
+            padding: 12px 25px;
+            font-size: 20px;
+            border-radius: 10px;
+            border: none;
+            cursor: pointer;
+            background: #2196f3;
+            color: white;
+            box-shadow: 0 0 10px rgba(33,150,243,0.7);
+        }
+
+        #best-score-display {
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
+            font-size: 18px;
+        }
+
+        #leaderboard-screen {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 60px;
+        }
+
+        #leaderboard-title {
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+
+        #leaderboard-list {
+            width: 90%;
+            max-width: 400px;
+            text-align: left;
+        }
+
+        .leaderboard-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 8px 10px;
+            margin-bottom: 6px;
+            background: rgba(255,255,255,0.05);
+            border-radius: 8px;
+        }
+
+        .medal {
+            margin-right: 8px;
+        }
+
+        #game-screen {
+            position: relative;
+        }
+
         .rocket {
             position: absolute;
             bottom: 50px;
@@ -53,7 +140,6 @@
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
 
-        /* Aile gauche */
         .rocket::after {
             content: "";
             position: absolute;
@@ -65,7 +151,6 @@
             clip-path: polygon(0% 100%, 100% 100%, 100% 0%);
         }
 
-        /* Aile droite */
         .wing-right {
             position: absolute;
             bottom: -20px;
@@ -76,7 +161,6 @@
             clip-path: polygon(0% 100%, 100% 100%, 0% 0%);
         }
 
-        /* Astéroïdes */
         .rock {
             position: absolute;
             width: 50px;
@@ -97,11 +181,10 @@
             position: absolute;
             top: 40%;
             width: 100%;
-            font-size: 40px;
+            font-size: 32px;
             display: none;
         }
 
-        /* Boutons téléphone */
         #controls {
             position: absolute;
             bottom: 20px;
@@ -119,11 +202,40 @@
             line-height: 120px;
             user-select: none;
         }
+
+        #back-home-game {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            padding: 6px 12px;
+            font-size: 14px;
+            border-radius: 8px;
+            border: none;
+            cursor: pointer;
+            background: rgba(0,0,0,0.5);
+            color: white;
+        }
     </style>
 </head>
 <body>
 
-<div id="game">
+<div id="game-container"></div>
+
+<div id="home-screen" class="screen active">
+    <div id="title">FUSÉE INFINITY</div>
+    <input id="pseudo-input" type="text" placeholder="Ton pseudo">
+    <button id="play-button" class="menu-button">Jouer</button>
+    <button id="leaderboard-button" class="menu-button">Classement</button>
+    <div id="best-score-display">Meilleur score : 0</div>
+</div>
+
+<div id="leaderboard-screen" class="screen">
+    <div id="leaderboard-title">Top 10</div>
+    <div id="leaderboard-list"></div>
+    <button id="back-home" class="menu-button">Retour</button>
+</div>
+
+<div id="game-screen" class="screen">
     <div id="score">Score : 0</div>
     <div id="message"></div>
 
@@ -135,66 +247,183 @@
         <div class="btn" id="left">←</div>
         <div class="btn" id="right">→</div>
     </div>
+
+    <button id="back-home-game">Quitter</button>
 </div>
 
 <script>
+/* ---------- Variables globales ---------- */
+const gameContainer = document.getElementById("game-container");
+const homeScreen = document.getElementById("home-screen");
+const gameScreen = document.getElementById("game-screen");
+const leaderboardScreen = document.getElementById("leaderboard-screen");
+
+const pseudoInput = document.getElementById("pseudo-input");
+const playButton = document.getElementById("play-button");
+const leaderboardButton = document.getElementById("leaderboard-button");
+const bestScoreDisplay = document.getElementById("best-score-display");
+
+const backHome = document.getElementById("back-home");
+const backHomeGame = document.getElementById("back-home-game");
+
+const leaderboardList = document.getElementById("leaderboard-list");
+
 let rocket = document.getElementById("rocket");
 let scoreDisplay = document.getElementById("score");
 let message = document.getElementById("message");
 
 let rocketX = window.innerWidth / 2;
-let speed = 4;
 let score = 0;
 let gameOver = false;
 
-/* Limites de la map */
+let scoreInterval = null;
+let moveInterval = null;
+
+let currentPlayer = "";
+
+/* ---------- Fond étoilé ---------- */
+function spawnStars() {
+    for (let i = 0; i < 120; i++) {
+        let s = document.createElement("div");
+        s.classList.add("star");
+        s.style.left = Math.random() * window.innerWidth + "px";
+        s.style.top = Math.random() * window.innerHeight + "px";
+        gameContainer.appendChild(s);
+
+        setInterval(() => {
+            let top = parseInt(s.style.top);
+            s.style.top = (top + 2) % window.innerHeight + "px";
+        }, 60);
+    }
+}
+spawnStars();
+
+/* ---------- LocalStorage ---------- */
+function getBestScore() {
+    return parseInt(localStorage.getItem("bestScore") || "0", 10);
+}
+
+function setBestScore(value) {
+    localStorage.setItem("bestScore", value.toString());
+}
+
+function getLeaderboard() {
+    let data = localStorage.getItem("leaderboard");
+    if (!data) return [];
+    try { return JSON.parse(data); }
+    catch { return []; }
+}
+
+function setLeaderboard(list) {
+    localStorage.setItem("leaderboard", JSON.stringify(list));
+}
+
+function updateBestScoreDisplay() {
+    bestScoreDisplay.textContent = "Meilleur score : " + getBestScore();
+}
+
+/* ---------- Navigation ---------- */
+function showScreen(screen) {
+    [homeScreen, gameScreen, leaderboardScreen].forEach(s => s.classList.remove("active"));
+    screen.classList.add("active");
+}
+
+/* ---------- Classement ---------- */
+function renderLeaderboard() {
+    const leaderboard = getLeaderboard().sort((a, b) => b.score - a.score).slice(0, 10);
+    leaderboardList.innerHTML = "";
+
+    if (leaderboard.length === 0) {
+        leaderboardList.innerHTML = "<p>Aucun score pour l'instant.</p>";
+        return;
+    }
+
+    leaderboard.forEach((entry, index) => {
+        const div = document.createElement("div");
+        div.classList.add("leaderboard-item");
+
+        const medal = document.createElement("span");
+        medal.classList.add("medal");
+
+        if (index === 0) medal.textContent = "🥇";
+        else if (index === 1) medal.textContent = "🥈";
+        else if (index === 2) medal.textContent = "🥉";
+        else medal.textContent = (index + 1) + ".";
+
+        const name = document.createElement("span");
+        name.textContent = entry.name;
+
+        const score = document.createElement("span");
+        score.textContent = entry.score;
+
+        div.appendChild(medal);
+        div.appendChild(name);
+        div.appendChild(score);
+
+        leaderboardList.appendChild(div);
+    });
+}
+
+/* ---------- Fusée ---------- */
 function clampRocket() {
     if (rocketX < 20) rocketX = 20;
     if (rocketX > window.innerWidth - 60) rocketX = window.innerWidth - 60;
 }
 
-/* Fond étoilé */
-function spawnStars() {
-    for (let i = 0; i < 80; i++) {
-        let s = document.createElement("div");
-        s.classList.add("star");
-        s.style.left = Math.random() * window.innerWidth + "px";
-        s.style.top = Math.random() * window.innerHeight + "px";
-        document.getElementById("game").appendChild(s);
-
-        setInterval(() => {
-            let top = parseInt(s.style.top);
-            s.style.top = (top + 3) % window.innerHeight + "px";
-        }, 50);
-    }
-}
-
-spawnStars();
-
-/* Vitesse selon score */
-function updateSpeed() {
-    if (score >= 1500) speed = 20;
-    else if (score >= 1000) speed = 14;
-    else if (score >= 500) speed = 10;
-    else if (score >= 250) speed = 7;
-    else if (score >= 100) speed = 5;
-}
-
-/* Déplacement fusée */
 function moveRocket() {
     clampRocket();
     rocket.style.left = rocketX + "px";
 }
 
-document.addEventListener("keydown", e => {
-    if (e.key === "ArrowLeft") rocketX -= 30;
-    if (e.key === "ArrowRight") rocketX += 30;
-});
+/* ---------- DIFFICULTÉ EXPONENTIELLE ---------- */
 
-document.getElementById("left").onclick = () => rocketX -= 30;
-document.getElementById("right").onclick = () => rocketX += 30;
+let baseSpeed = 4;          // vitesse de base des rochers
+let speedMultiplier = 1;    // multiplicateur exponentiel
+let spawnBase = 800;        // délai de spawn de base
+let spawnMultiplier = 1;    // multiplicateur exponentiel
+let pointInterval = 400;    // intervalle de points de base
+let pointMultiplier = 1;    // multiplicateur exponentiel
 
-/* Astéroïdes */
+// Liste des paliers fixes
+const fixedThresholds = [100, 250, 500, 1000, 1500];
+
+// On garde en mémoire les paliers déjà activés
+let activatedThresholds = new Set();
+
+function updateDifficulty() {
+    let thresholds = [...fixedThresholds];
+
+    // Paliers infinis tous les 500 après 1500
+    if (score >= 1500) {
+        let extra = Math.floor((score - 1500) / 500);
+        for (let i = 0; i <= extra; i++) {
+            thresholds.push(1500 + i * 500);
+        }
+    }
+
+    thresholds.forEach(t => {
+        if (score >= t && !activatedThresholds.has(t)) {
+            activatedThresholds.add(t);
+
+            // On double tout
+            speedMultiplier *= 2;
+            spawnMultiplier *= 2;
+            pointMultiplier *= 2;
+
+            // Mise à jour des valeurs
+            speed = baseSpeed * speedMultiplier;
+            currentSpawnDelay = Math.max(50, spawnBase / spawnMultiplier);
+            currentPointDelay = Math.max(20, pointInterval / pointMultiplier);
+
+            restartScoreLoop();
+        }
+    });
+}
+
+/* ---------- Astéroïdes ---------- */
+let speed = baseSpeed;
+let currentSpawnDelay = spawnBase;
+
 function spawnRock() {
     if (gameOver) return;
 
@@ -203,7 +432,7 @@ function spawnRock() {
     rock.style.left = Math.random() * (window.innerWidth - 60) + "px";
     rock.style.top = "-60px";
 
-    document.getElementById("game").appendChild(rock);
+    gameScreen.appendChild(rock);
 
     let fall = setInterval(() => {
         if (gameOver) {
@@ -225,8 +454,10 @@ function spawnRock() {
             r.bottom > f.top
         ) {
             gameOver = true;
-            message.innerHTML = "💥 GAME OVER 💥<br>Score : " + score;
-            message.style.display = "block";
+            endGame();
+            clearInterval(fall);
+            rock.remove();
+            return;
         }
 
         if (top > window.innerHeight) {
@@ -235,34 +466,103 @@ function spawnRock() {
         }
     }, 20);
 
-    setTimeout(spawnRock, 800 - Math.min(score, 700));
+    setTimeout(spawnRock, currentSpawnDelay);
 }
 
-/* Score */
-function updateScore() {
-    if (gameOver) return;
+/* ---------- Score exponentiel ---------- */
+let currentPointDelay = pointInterval;
 
-    score++;
-    scoreDisplay.innerHTML = "Score : " + score;
-
-    updateSpeed();
-
-    if (score >= 2000) {
-        gameOver = true;
-        message.innerHTML = "🏆 VICTOIRE ! 🏆<br>Score : " + score;
-        message.style.display = "block";
-    }
-
-    setTimeout(updateScore, 500);
+function restartScoreLoop() {
+    clearInterval(scoreInterval);
+    scoreInterval = setInterval(() => {
+        if (!gameOver) {
+            score++;
+            scoreDisplay.textContent = "Score : " + score;
+            updateDifficulty();
+        }
+    }, currentPointDelay);
 }
 
-moveRocket();
-spawnRock();
-updateScore();
+/* ---------- Fin de partie ---------- */
+function endGame() {
+    message.innerHTML = "💥 GAME OVER 💥<br>Score : " + score;
+    message.style.display = "block";
 
-setInterval(moveRocket, 20);
+    const best = getBestScore();
+    if (score > best) setBestScore(score);
+
+    let leaderboard = getLeaderboard();
+    leaderboard.push({ name: currentPlayer, score: score });
+    leaderboard.sort((a, b) => b.score - a.score);
+    leaderboard = leaderboard.slice(0, 10);
+    setLeaderboard(leaderboard);
+
+    updateBestScoreDisplay();
+}
+
+/* ---------- Lancement du jeu ---------- */
+function startGame() {
+    gameOver = false;
+    score = 0;
+    speed = baseSpeed;
+    speedMultiplier = 1;
+    spawnMultiplier = 1;
+    pointMultiplier = 1;
+    currentSpawnDelay = spawnBase;
+    currentPointDelay = pointInterval;
+    activatedThresholds.clear();
+
+    message.style.display = "none";
+    scoreDisplay.textContent = "Score : 0";
+
+    rocketX = window.innerWidth / 2;
+    moveRocket();
+
+    document.querySelectorAll(".rock").forEach(r => r.remove());
+
+    if (moveInterval) clearInterval(moveInterval);
+    moveInterval = setInterval(moveRocket, 20);
+
+    restartScoreLoop();
+    spawnRock();
+}
+
+/* ---------- Contrôles ---------- */
+document.addEventListener("keydown", e => {
+    if (!gameScreen.classList.contains("active")) return;
+    if (e.key === "ArrowLeft") rocketX -= 30;
+    if (e.key === "ArrowRight") rocketX += 30;
+});
+
+document.getElementById("left").onclick = () => rocketX -= 30;
+document.getElementById("right").onclick = () => rocketX += 30;
+
+/* ---------- Boutons menu ---------- */
+playButton.addEventListener("click", () => {
+    currentPlayer = pseudoInput.value.trim() || "Anonyme";
+    showScreen(gameScreen);
+    startGame();
+});
+
+leaderboardButton.addEventListener("click", () => {
+    renderLeaderboard();
+    showScreen(leaderboardScreen);
+});
+
+backHome.addEventListener("click", () => {
+    showScreen(homeScreen);
+});
+
+backHomeGame.addEventListener("click", () => {
+    gameOver = true;
+    clearInterval(scoreInterval);
+    clearInterval(moveInterval);
+    showScreen(homeScreen);
+});
+
+/* ---------- Init ---------- */
+updateBestScoreDisplay();
 </script>
 
 </body>
 </html>
-
